version/0.16/_sources/api/solver/_autosummary/settings/ensight_gold.rst.txt
:orphan:

.. _ensight_gold:

ensight_gold
============

.. autoclass:: ansys.fluent.core.solver.settings_232.ensight_gold.ensight_gold
    :show-inheritance:

.. rubric:: Arguments

========================================================   ====================================

Argument                                                                                Summary

========================================================   ====================================
:ref:`name <name>`                                                                'name' child.

:ref:`cell_func_domain_export <cell_func_domain_export>`       'cell_func_domain_export' child.

========================================================   ====================================

.. rubric:: Included in:

======================   ==========================

Parent                                      Summary

======================   ==========================
:ref:`export <export>`       Enter the export menu.

======================   ==========================

