version/0.20/_sources/api/solver/_autosummary/settings/ensight_gold.rst.txt
:orphan:

.. _ensight_gold:

ensight_gold
============

.. autoclass:: ansys.fluent.core.solver.settings_241.ensight_gold.ensight_gold
    :show-inheritance:

.. rubric:: Arguments

========================================================   ====================================

Argument                                                                                Summary

========================================================   ====================================
:ref:`file_name <file_name_1>`                                               'file_name' child.

:ref:`cell_func_domain_export <cell_func_domain_export>`       'cell_func_domain_export' child.

:ref:`binary_format <binary_format>`                                     'binary_format' child.

:ref:`cellzones <cellzones>`                                      List of cell zones to export.

:ref:`interior_zone_surfaces <interior_zone_surfaces>`              List of surfaces to export.

:ref:`cell_centered <cell_centered>`                                     'cell_centered' child.

========================================================   ====================================

.. rubric:: Included in:

======================   ==========================

Parent                                      Summary

======================   ==========================
:ref:`export <export>`       Enter the export menu.

======================   ==========================

